<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/rg_rank"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_rank_low"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rank_list_title_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/low_level"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/rb_rank_medium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rank_list_title_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/medium_level"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/rb_rank_high"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rank_list_title_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/high_level"
            android:textSize="28sp" />

        <RadioButton
            android:id="@+id/rb_rank_self_define"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rank_list_title_selector"
            android:button="@null"
            android:gravity="center"
            android:text="@string/self_define_level"
            android:textSize="28sp" />
    </RadioGroup>

    <ListView
        android:id="@+id/lv_rank"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="-40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_reset_rank"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/reset" />

        <Button
            android:id="@+id/btn_back_to_menu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/back_to_menu" />
    </LinearLayout>
</LinearLayout>