<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_dark"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/item_level_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_selector"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            style="@style/setting_item_style"
            android:layout_width="wrap_content"
            android:layout_gravity="left"
            android:text="@string/game_level_tips" />

        <TextView
            android:id="@+id/tv_game_level"
            style="@style/setting_item_style"
            android:layout_gravity="right"
            android:layout_marginLeft="20dp"
            android:text="@string/low_level" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/item_map_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_selector"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_map_setting_tips"
            style="@style/setting_item_style"
            android:text="@string/map_size_setting_tips" />

        <TextView
            android:id="@+id/tv_map_setting"
            style="@style/setting_item_style"
            android:layout_marginLeft="20dp"
            android:text="10*10*10" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/item_block_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/setting_item_selector"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_block_setting_tips"
            style="@style/setting_item_style"
            android:text="@string/block_size_setting_tips" />

        <TextView
            android:id="@+id/tv_block_size"
            style="@style/setting_item_style"
            android:layout_marginLeft="20dp"
            android:text="100" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_back_to_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="还回主菜单" />

</LinearLayout>